--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@tiptap/pm": "^3.0.7",
     "@tiptap/react": "^3.0.7",
     "@tiptap/starter-kit": "^3.0.7",
+    "ai": "^4.3.19",
     "dayjs": "^1.11.13",
     "next": "15.3.3",
+    "openai": "^5.10.1",
     "react": "^19.0.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
