--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tiptap/starter-kit": "^3.0.7",
     "ai": "^4.3.19",
     "dayjs": "^1.11.13",
+    "dompurify": "^3.2.6",
     "next": "15.3.3",
     "openai": "^5.10.1",
     "react": "^19.0.0",
