--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "ai": "^4.3.19",
     "dayjs": "^1.11.13",
     "dompurify": "^3.2.6",
+    "lucide-react": "^0.526.0",
     "next": "15.3.3",
     "openai": "^5.10.1",
-    "react": "^19.0.0",
+    "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^8.4.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
     "recharts": "^3.0.2"
   },
