--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-datepicker": "^8.4.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
-    "recharts": "^3.0.2"
+    "recharts": "^3.0.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
