--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ai": "^4.3.19",
     "dayjs": "^1.11.13",
     "dompurify": "^3.2.6",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.526.0",
     "next": "15.3.3",
     "openai": "^5.10.1",
@@ -27,6 +28,7 @@
     "react-datepicker": "^8.4.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "recharts": "^3.0.2",
     "uuid": "^11.1.0"
   },
