--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tiptap/react": "^3.0.7",
     "@tiptap/starter-kit": "^3.0.7",
     "ai": "^4.3.19",
+    "aos": "^2.3.4",
     "dayjs": "^1.11.13",
     "dompurify": "^3.2.6",
     "framer-motion": "^12.23.12",
