--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "@tiptap/starter-kit": "^3.0.7",
     "ai": "^4.3.19",
     "aos": "^2.3.4",
-    "dayjs": "^1.11.13",
+    "bcryptjs": "^3.0.3",
+    "dayjs": "^1.11.19",
     "dompurify": "^3.2.6",
     "framer-motion": "^12.23.12",
+    "joi": "^18.0.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.526.0",
+    "mongodb": "^7.0.0",
     "next": "15.3.3",
     "openai": "^5.10.1",
     "react": "18.2.0",
@@ -32,6 +36,7 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "recharts": "^3.0.2",
+    "swr": "^2.3.6",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
