refactor: handle api and implimentation

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ai": "^4.3.19",
     "aos": "^2.3.4",
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.8.0",
     "dayjs": "^1.11.19",
     "dompurify": "^3.2.6",
     "framer-motion": "^12.23.12",
@@ -34,6 +35,7 @@
     "react-datepicker": "^8.4.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
+    "react-image-crop": "^11.0.10",
     "react-intersection-observer": "^9.16.0",
     "recharts": "^3.0.2",
     "swr": "^2.3.6",
