--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.526.0",
     "mongodb": "^7.0.0",
-    "next": "15.3.3",
+    "next": "^16.0.10",
     "openai": "^5.10.1",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
